# aws-entityresolution

./: .bandit  .coveragerc  .editorconfig  .env.example  .env.test  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  ARCHITECTURE.md  IMPROVEMENTS.md  LINTING.md  Makefile  README.md  SIMPLIFIED-ARCHITECTURE.md  TODO.md  example.config.yaml  fix_imports.py  pyproject.toml  pytest.ini  setup.cfg
.cursor/rules/: python.mdc  terraform.mdc
.github/workflows/: ci.yml  python-tests.yml  snowflake-pipeline.yml
cloudformation/entity-resolution-product/: README.md  entity-resolution-template.yaml  service-catalog-product.yaml
docs/: ARCHITECTURE_SIMPLIFIED.md  AWS_ENTITY_RESOLUTION.md  CLI_USAGE.md  LINTING_CONFIGURATION.md
scripts/: README.md  __init__.py  fix_all.py  fix_all_annotations.py  fix_import_order.py  fix_mypy.py  fix_mypy_issues.py  fix_ruff.py  fix_style.py  fix_terraform.py  fix_test_loader.py  fix_test_processor.py  fix_tests.py  fix_type_annotations.py  fix_typer_annotations.py  fix_typing_imports.py  lint.py  lint_fix_all.sh  precommit.py  remove_f401_ignores.py  run_mypy.py
src/aws_entity_resolution/: __init__.py  aws_utils.py  cli.py  config.py  config.yaml.example  lambda_handlers.py  services.py  utils.py
src/aws_entity_resolution/cli/: __init__.py  main.py
src/aws_entity_resolution/cli/commands/: base.py  loader.py  processor.py
src/aws_entity_resolution/config/: README.md  __init__.py  lambda_helpers.py  settings.py  unified.py
src/aws_entity_resolution/extractor/: cli.py  database.py  extractor.py
src/aws_entity_resolution/lambda_handlers/: entity_resolution_handler.py  snowflake_handler.py
src/aws_entity_resolution/loader/: cli.py  loader.py  snowflake_loader.py  snowflake_setup.sql  types.py
src/aws_entity_resolution/processor/: cli.py  processor.py  types.py
src/aws_entity_resolution/services/: __init__.py  entity_resolution.py  s3.py  snowflake.py
src/aws_entity_resolution/utils/: __init__.py  aws.py  error.py  logging.py  validation.py
terraform/: ARCHITECTURE.md  README.md  main.tf  outputs.tf  variables.tf
terraform/entity-resolution-pipeline/: README.md  lambda-check-status.tf  lambda-load.tf  lambda-notify.tf  lambda-process.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  step-functions.tf  terraform.tfvars.example  variables.tf
terraform/entity-resolution-pipeline/docs/: autosys_integration.md
terraform/entity-resolution-pipeline/lambda/check_status/: handler.py
terraform/entity-resolution-pipeline/lambda/extract/: handler.py
terraform/entity-resolution-pipeline/lambda/load/: handler.py
terraform/entity-resolution-pipeline/lambda/notify/: handler.py
terraform/entity-resolution-pipeline/lambda/process/: handler.py
terraform/entity-resolution-pipeline/modules/entity_resolution/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/entity-resolution-pipeline/modules/entity_resolution/glue/: entity_resolution_job.py
terraform/entity-resolution-pipeline/modules/snowflake_extractor/: main.tf  outputs.tf  variables.tf
terraform/entity-resolution-pipeline/modules/snowflake_extractor/templates/: snowflake_to_s3_extraction.py.tpl
terraform/entity-resolution-pipeline/modules/snowflake_loader/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/entity-resolution-pipeline/modules/snowflake_loader/templates/: s3_to_snowflake_loader.py.tpl
terraform/entity-resolution-pipeline/scripts/: config.json  domain_entity_resolution_jobs.jil  domain_entity_resolution_sequential_jobs.jil  entity_resolution_job.jil  er_extract.sh  er_load.sh  er_process.sh  generate_entity_resolution_params.py.save  run_entity_resolution.sh  run_entity_resolution_domain.sh  run_entity_resolution_stage.sh
terraform/environments/dev/: env.tfvars  locals.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/common/: variables.tf
terraform/modules/config/: main.tf  outputs.tf  variables.tf
terraform/modules/entity-resolution-pipeline/: main.tf  outputs.tf  variables.tf
terraform/modules/event-trigger/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda-functions/: main.tf  outputs.tf
terraform/modules/lambda-functions/check-status/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/lambda-functions/common/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda-functions/load-data/: main.tf  outputs.tf
terraform/modules/monitoring/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/schema/: main.tf  outputs.tf  variables.tf
terraform/modules/schema/template/: main.tf  variables.tf
terraform/modules/schema/validator/: main.tf  variables.tf
terraform/modules/schema_templates/: README.md  customize.tf  main.tf
terraform/modules/schema_validator/: README.md  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/modules/step-functions/: main.tf  outputs.tf  variables.tf
terraform/modules/step-functions/templates/: workflow.json.tpl
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_aws_basic.py  test_aws_moto.py  test_aws_utils.py  test_cli.py  test_config.py  test_lambda_handlers.py  test_services.py  test_settings.py
tests/cli/: test_main.py
tests/config/: test_lambda_helpers.py  test_unified.py
tests/extractor/: test_database.py  test_extractor.py  test_extractor_cli.py  test_extractor_cli_unit.py  test_extractor_debug.py
tests/lambda_handlers/: test_lambda_handlers.py
tests/loader/: test_loader.py  test_loader_cli.py
tests/processor/: test_processor.py  test_processor_cli.py
tests/utils/: test_aws.py  test_error.py  test_logging.py  test_schema_loader.py  test_validation.py
